config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asa-oppgave
  namespace: apps
  labels:
    app: asa-oppgave
spec:
  replicas: 4
  selector:
    matchLabels:
      app: asa-oppgave
  template:
    metadata:
      labels:
        app: asa-oppgave
    spec:
      containers:
        - name: asa-oppgave
          image: <IMAGE>
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
  minReadySeconds: 5
